<resources>
    <string name="app_name">E-Clearance</string>
    <string name="home">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="floatingactionbutton">Add Data</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="input_title">Add Data</string>
    <string name="name_label">Name</string>
    <string name="desc_label">Description</string>
    <string name="add_kapal_title">Add Ship</string>
    <string name="detail_kapal_title">Ship Details</string>
    <string name="blue_cat_title">PHQC Documents</string>
    <string name="add_data_title">Add Data</string>
    <string name="phqc_add_data_title">Add PHQC Data</string>
    <string name="add_signature_title">Add Signature</string>
    <string name="document_detail_title">Document Details</string>
    <string name="cop_add_data_title">Add COP Document</string>
    <string name="sscec_add_data_title">Add SSCEC Document</string>
    <string name="sscec_rekomendasi_add_data_title">Recommendation</string>
    <string name="title_activity_p3_kinput">P3KInputActivity</string>
    <string name="radio_lengkap">Complete</string>
    <string name="radio_tidak_lengkap">Incomplete</string>
    <string name="radio_tidak_tersedia">Not available</string>
    <string name="p3k_add_data_title">Add P3K Document</string>
    <string name="radio_risk_high">High risk</string>
    <string name="radio_risk_low">Low risk</string>
    <string name="radio_risk_safe">No risk</string>
    <string name="radio_istrue">Available</string>
    <string name="radio_isfalse">Not available</string>
    <string name="profile_title">Profile</string>
    <string name="quarantine_use">Installed</string>
    <string name="quarantine_not_use">Not installed</string>
    <string name="has_update">* There are unsaved changes, please save first.</string>
    <string name="add_sign_pt2">+ Signature Officer 2 (Opt)</string>
    <string name="add_sign_pt3">+ Signature Officer 3 (Opt)</string>
    <string name="nip">NIP</string>
    <string name="petugas2">Officer 2</string>
    <string name="petugas3">Officer 3</string>
    <string name="delete_sign">Delete Signature</string>
    <string name="negara_asal">Country/Port of Origin</string>
    <string name="cari_kapal">Search ship...</string>
    <string name="clear">Clear</string>
    <string name="general_info_kapal">General Ship Info</string>
    <string name="not_completed">Incomplete</string>
    <string name="document_kapal_title">Ship Documents</string>
    <string name="sanitasi_kapal">Ship Sanitation</string>
    <string name="recommendation">Recommendation</string>
    <string name="save_document_title">Save Document</string>
    <string name="delete_title">Delete</string>
    <string name="save_title">Save</string>
    <string name="upload_data_title">Upload Data</string>
    <string name="general_info_subtitle">General Information</string>
    <string name="jenis_layanan_subtitle">Service Type</string>
    <string name="keberangkatan_subtitle">Departure</string>
    <string name="kedatangan_subtitle">Arrival</string>
    <string name="jenis_pelayaran_subtitle">Shipping Type</string>
    <string name="radio_domestik">Domestic</string>
    <string name="radio_internasional">International</string>
    <string name="pelabuhan_tujuan">Destination Port</string>
    <string name="tanggal_tiba">Arrival Date</string>
    <string name="lokasi_sandar">Docking Location</string>
    <string name="lokasi_pemeriksaan">Inspection Location</string>
    <string name="data_abk_asing_title">Foreign Crew Data</string>
    <string name="jumlah_abk_asing_title">Number of Foreign Crew</string>
    <string name="jumlah_abk_asing_meninggal_title">Number of Foreign Crew Deceased</string>
    <string name="jumlah_sehat">Number of Healthy Crew</string>
    <string name="jumlah_sakit">Number of Sick Crew</string>
    <string name="data_abk_wni_title">WNI Crew Data</string>
    <string name="jumlah_abk_wni_title">Number of WNI Crew</string>
    <string name="jumlah_abk_wni_meninggal_title">Number of WNI Crew Deceased</string>
    <string name="data_penumpang_asing_title">Foreign Passenger Data</string>
    <string name="jumlah_penumpang_asing_title">Number of Foreign Passengers</string>
    <string name="jumlah_penumpang_asing_meninggal_title">Number of Foreign Passengers Deceased</string>
    <string name="data_penumpang_wni_title">WNI Passenger Data</string>
    <string name="jumlah_penumpang_wni_title">Number of WNI Passengers</string>
    <string name="jumlah_penumpang_wni_meninggal">Number of WNI Passengers Deceased</string>
    <string name="pelanggaran_karantina_title">Quarantine Violations</string>
    <string name="radio_title_isyarat_karantina">Quarantine Signals</string>
    <string name="radio_title_kegiatan_sebelum_petugas">Activities Before Officers Arrive</string>
    <string name="document_kesehatan_title">Ship Health Documents</string>
    <string name="kesimpulan_title">Conclusion</string>
    <string name="radio_title_pemeriksaan_obat_p3k">P3K Medicine Inspection</string>
    <string name="radio_lengkap_berlaku">Complete and valid</string>
    <string name="radio_lengkap_tidak_berlaku">Complete but not valid</string>
    <string name="radio_tidak_lengkap_tidak_berlaku">Incomplete and not valid</string>
    <string name="penerbitan_dokument_title">Document Issuance</string>
    <string name="dokumen_title">Document</string>
    <string name="dokumen_fp">Free Pratique</string>
    <string name="dokumen_rp">Restricted Pratique</string>
    <string name="tanggal_title">Date</string>
    <string name="jam_title">Time</string>
    <string name="upload_dokumen_title">Upload Documents</string>
    <string name="add_sign_kapten_button">+ Captain Signature</string>
    <string name="press_to_update_sign">Tap to Change Signature</string>
    <string name="kapten_kapal_title">Captain</string>
    <string name="kapten_title">Captain</string>
    <string name="add_sign_petugas_button">+ Officer Signature</string>
    <string name="quarantine_officer_title">Quarantine Officer</string>
    <string name="petugas_title">Officer</string>
    <string name="petugas2_title">Officer 2</string>
    <string name="nip_petugas2_title">NIP Officer 2</string>
    <string name="petugas3_title">Officer 3</string>
    <string name="nip_petugas3_title">NIP Officer 3</string>
    <string name="informasi_kapal_title">Ship Information</string>
    <string name="no_data">No Data!</string>
    <string name="kapal_name_title">Ship Name</string>
    <string name="kapal_imo_title">IMO / Registration Number</string>
    <string name="kapal_agen_title">Agency Name</string>
    <string name="kapal_gross_tone">Gross Tonnage</string>
    <string name="kapal_bendera">Flag</string>
    <string name="kapal_tipe_title">Ship Type</string>
    <string name="radio_ferry">Ferry</string>
    <string name="radio_non_ferry">Non-Ferry</string>
    <string name="login_title">Login</string>
    <string name="login_desc">Login with your created account</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="login_button">Login</string>
    <string name="pemeriksaan_kapal_title">Ship Inspection</string>
    <string name="tanggal_diperiksa_title">Inspection Date</string>
    <string name="data_abk_title">Crew Data</string>
    <string name="jumlah_abk">Number of Crew</string>
    <string name="peralatan_p3k_title">First Aid Equipment</string>
    <string name="oxygen_emergency_title">Emergency Oxygen</string>
    <string name="fasilitas_medik_title">Medical Facilities</string>
    <string name="antibiotik_title">Antibiotic Medications</string>
    <string name="analgesik_title">Analgesic Medications</string>
    <string name="obat_lainnya_title">Other Medications</string>
    <string name="narkotik_title">Narcotic Medications</string>
    <string name="resiko_title">Risk</string>
    <string name="masalah_title">Problem</string>
    <string name="bukti_masalah_title">Problem Evidence</string>
    <string name="catatan_permasalahan_title">Problem Notes</string>
    <string name="p3k_title">P3K / First Aid Kit</string>
    <string name="tujuan_berikutnya_title">Next Destination</string>
    <string name="deteksi_abk_demam_title">Crew Fever Detection</string>
    <string name="jumlah_abk_sehat_title">Number of Healthy Crew</string>
    <string name="jumlah_abk_sakit_title">Number of Sick Crew</string>
    <string name="jumlah_abk_meninggal_title">Number of Deceased Crew</string>
    <string name="jumlah_abk_dirujuk_title">Number of Reffered Crew</string>
    <string name="jumlah_penumpang_title">Number of Passenger</string>
    <string name="deteksi_penumpang_demam_title">Passenger Fever Detection</string>
    <string name="jumlah_penumpang_sehat">Number of Healthy Passengers</string>
    <string name="jumlah_penumpang_sakit">Number of Sick Passengers</string>
    <string name="jumlah_penumpang_meninggal">Number of Deceased Passengers</string>
    <string name="jumlah_penumpang_dirujuk">Number of Reffered Passengers</string>
    <string name="status_sanitasi_title">Sanitation Status</string>
    <string name="masalah_kesehatan_title">Health Issue</string>
    <string name="jam_diperiksa_title">Inspection Time</string>
    <string name="hasil_pemeriksaan_kapal">Ship Inspection Results</string>
    <string name="update_title">Update</string>
    <string name="deteksi_demam_title">Fever Detection</string>
    <string name="jumlah_meninggal">Number of Deaths</string>
    <string name="jumlah_dirujuk">Number of Referrals</string>
    <string name="data_penumpang">Passenger Data</string>
    <string name="pemeriksaan_sanitasi_title">Ship Sanitation Inspection</string>
    <string name="sanitasi_dapur">Gally Room</string>
    <string name="radio_memenuhi_syarat">Meets Requirements</string>
    <string name="radio_tidak_memenuhi_syarat">Does Not Meet Requirements</string>
    <string name="sanitasi_ruang_rakit">Pantry Room</string>
    <string name="sanitasi_gudang">Store Room</string>
    <string name="sanitasi_palka">Cargo Room</string>
    <string name="sanitasi_ruang_tidur">Quarter Room</string>
    <string name="sanitasi_abk">Crew Room</string>
    <string name="sanitasi_ruang_perwira">Officer Room</string>
    <string name="sanitasi_ruang_penumpang">Passenger Room</string>
    <string name="sanitasi_ruang_geladak">Deck Room</string>
    <string name="sanitasi_ruang_air_minum">Portable Water Room</string>
    <string name="sanitasi_ruang_limba_cair">Sewange Room</string>
    <string name="sanitasi_ruang_air_tergenang">Standing Water Room</string>
    <string name="sanitasi_ruang_mesin">Engine Room</string>
    <string name="sanitasi_fasilitas_medis">Medical Facilities Room</string>
    <string name="sanitasi_area_lainnya">Other Area Spesified Room</string>
    <string name="pemeriksaan_vektor_kapal_title">Ship Vector Inspection</string>
    <string name="sanitasi_vector_true">Vectors and signs are present</string>
    <string name="sanitasi_vector_false">No Vectors</string>
    <string name="sanitasi_disinseksi">Disinsection</string>
    <string name="sanitasi_fumigasi">Fumigation</string>
    <string name="sanitasi_no_problem">No problems</string>
    <string name="resiko_sanitasi_title">Sanitation Risk</string>
    <string name="tanda_vector_title">Vector Signs</string>
    <string name="bukti_masalah_kesehatan_title">Health Issues Evidence</string>
    <string name="hasil_pemeriksaan_sanitasi_title">Sanitation Inspection Results</string>
    <string name="signature_title">Signature</string>
    <string name="signature_saved">Signature Saved</string>
    <string name="signature_change_title">Change Signature</string>
    <string name="signature_reset_button">Reset</string>
    <string name="past_sscec_doc_title">Past SSCEC Date</string>
    <string name="tempat_terbit">Rising Place</string>
    <string name="note_title">Notes</string>
</resources>