<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".input.cop.CopInputDokumenActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/headerBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/document_kapal_title"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="@color/white"
            app:titleTextAppearance="@style/TopBarTextStyle"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="14dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pelanggaran_karantina_title"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_title_isyarat_karantina"
                    android:textSize="12sp"
                    android:fontFamily="@font/poppins_semibold"
                    android:layout_marginVertical="8dp"/>

                <RadioGroup
                    android:id="@+id/radioKarantina"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radio_karantina_true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="12sp"
                        android:text="@string/quarantine_use"/>
                    <RadioButton
                        android:id="@+id/radio_karantina_false"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="12sp"
                        android:text="@string/quarantine_not_use"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_title_kegiatan_sebelum_petugas"
                    android:textSize="12sp"
                    android:fontFamily="@font/poppins_semibold"
                    android:layout_marginVertical="8dp"/>

                <RadioGroup
                    android:id="@+id/radioActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radio_activity_true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="12sp"
                        android:text="@string/radio_istrue"/>
                    <RadioButton
                        android:id="@+id/radio_activity_false"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="12sp"
                        android:text="@string/radio_isfalse"/>
                </RadioGroup>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/document_kesehatan_title"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginVertical="8dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etRekomendasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="14dp"
                android:hint="@string/recommendation"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/dropdownRekomendasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:simpleItems="@array/recomendation_list"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:id="@+id/health_file_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="14dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/bukti_masalah_kesehatan_title"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/prevMasalah"
                    android:layout_width="154dp"
                    android:layout_height="210dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/bg_signature_pad"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnSelectMasalah"
                    style="@style/Widget.Material3.Button.IconButton.Filled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_dokumen_title"
                    app:icon="@drawable/ic_doc"
                    app:iconPadding="8dp" />

            </LinearLayout>
            <Button
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:id="@+id/saveButton"
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_title"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>