<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".input.p3k.P3KInputDataUmumActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/headerBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/general_info_kapal"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="@color/white"
            app:titleTextAppearance="@style/TopBarTextStyle"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout
        android:id="@+id/inputFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBar">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="14dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/general_info_subtitle"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_semibold"
                    android:layout_marginBottom="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jenis_layanan_subtitle"
                        android:textSize="12sp"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_marginVertical="8dp"/>

                    <RadioGroup
                        android:id="@+id/radioJenisLayanan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/radio_layanan_keberangkatan"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="12sp"
                            android:text="@string/keberangkatan_subtitle"/>
                        <RadioButton
                            android:id="@+id/radio_layanan_kedatangan"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="12sp"
                            android:text="@string/kedatangan_subtitle"/>
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jenis_pelayaran_subtitle"
                        android:textSize="12sp"
                        android:fontFamily="@font/poppins_semibold"
                        android:layout_marginVertical="8dp"/>

                    <RadioGroup
                        android:id="@+id/radioJenisPelayaran"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/radio_pelayaran_domestik"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="12sp"
                            android:text="@string/radio_domestik"/>
                        <RadioButton
                            android:id="@+id/radio_pelayaran_inter"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="12sp"
                            android:text="@string/radio_internasional"/>
                    </RadioGroup>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etLokasiPemeriksaan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:hint="@string/lokasi_pemeriksaan"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/dropdownLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        app:simpleItems="@array/lokasi_list"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etTanggalDiperiksa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:hint="@string/tanggal_diperiksa_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_regular"
                        android:inputType="none"
                        android:cursorVisible="false"
                        android:focusable="false"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_abk_title"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_semibold"
                    android:layout_marginBottom="8dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etJmlABK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:hint="@string/jumlah_abk">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="number"
                        android:maxLength="4"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_regular"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:orientation="horizontal">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etJmlSehat"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="14dp"
                        android:hint="@string/jumlah_sehat">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="number"
                            android:maxLength="4"
                            android:textColor="@color/black"
                            android:fontFamily="@font/poppins_regular"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etJmlSakit"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="14dp"
                        android:hint="@string/jumlah_sakit">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="number"
                            android:maxLength="4"
                            android:textColor="@color/black"
                            android:fontFamily="@font/poppins_regular"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <Button
                    style="@style/Widget.Material3.Button.IconButton.Filled"
                    android:id="@+id/saveButton"
                    android:layout_marginTop="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_title" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>