<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="14dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dokumen Title"
        android:textSize="12sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginVertical="8dp"/>
    <RadioGroup
        android:id="@+id/radio"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:text="@string/radio_istrue"/>
        <RadioButton
            android:id="@+id/radio_false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:text="@string/radio_isfalse"/>
    </RadioGroup>
    <ImageView
        android:id="@+id/prevDoc"
        android:layout_width="154dp"
        android:layout_height="210dp"
        android:background="@drawable/bg_signature_pad"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"/>
    <Button
        android:id="@+id/btnSelectDoc"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_dokumen_title"
        app:icon="@drawable/ic_doc"
        android:visibility="gone"
        app:iconPadding="8dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/in_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/note_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>